# chemsim

./: .gitignore  Cargo.toml  TODO.md  run.bash  shell.nix
nix/: nixpkgs.nix
nix/arrayfire/: default.nix
nix/avogadro/: default.nix
nix/cantera/: default.nix
nix/clfft/: default.nix
nix/cp2k/: default.nix  fix-makefile.patch
nix/dalton/: default.nix
nix/forge/: default.nix
nix/libxsmm/: default.nix
nix/movipac/: default.nix
nix/openbabel/: default.nix
nix/yaehmop/: default.nix
src/: convolver.rs  display.rs  lbm.rs  lib.rs  main.rs  matrix.rs  preconditioned.rs  record.rs  render.rs  theme.rs
src/qchem/: mod.rs
