[package]
name = "chemsim"
version = "0.1.0"
authors = ["Remy Goldschmidt <taktoa@gmail.com>"]

[dependencies]
piston = "*"
pistoncore-glutin_window = "*"
piston2d-graphics = "*"
piston2d-opengl_graphics = "*"
arrayfire = "3.5.*"
timer = "0.2.*"
chrono = "0.4.*"
image = "0.19.*"
num-complex = "*"

[lib]
name = "chemsim"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/main.rs"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
