[package]
name = "chemsim"
version = "0.1.0"
authors = ["Remy Goldschmidt <taktoa@gmail.com>"]

[dependencies]
piston                   = "*"
piston-float             = "*"
piston-music             = "*"
piston-texture           = "*"
piston-shaders           = "*"
piston-viewport          = "*"
piston-history_tree      = "*"
piston-timer_controller  = "*"
pistoncore-glutin_window = "*"
# pistoncore-event         = "*"
pistoncore-event_loop    = "*"
pistoncore-input         = "*"
pistoncore-window        = "*"
piston2d-shapes          = "*"
piston2d-sprite          = "*"
piston2d-graphics        = "*"
piston2d-gfx_graphics    = "*"
piston2d-glium_graphics  = "*"
piston2d-opengl_graphics = "*"
piston2d-graphics_tree   = "*"
piston3d-cam             = "*"
piston3d-gfx_voxel       = "*"
piston3d-construct       = "*"
gif                      = "*"
gfx                      = "*"
gfx_app                  = "*"
gfx_core                 = "*"
gfx_macros               = "*"
gfx_device_gl            = "*"
gfx_window_sdl           = "*"
# gfx_window_glfw          = "*"
gfx_window_glutin        = "*"
conrod                   = { version = "*", features = ["piston"] }
conrod_derive            = "*"
ttf-noto-sans            = "*"
rusttype                 = "*"
# mallumo                  = "*"
# ocl-core                 = "*"
# ocl-interop              = "*"
# ocl                      = "*"
# clfft                    = "*"
arrayfire                = "3.5.*"
arrayfire_serde          = "*"
timer                    = "0.2.*"
chrono                   = "0.4.*"
image                    = "0.19.*"
void                     = "*"
num                      = "*"
num-integer              = "*"
num-complex              = "*"
num-traits               = "*"
generic-array            = "*"
dimensioned              = "*"
typenum                  = "*"
serde                    = "*"
serde_derive             = "*"
serde_json               = "*"
serde_cbor               = "*"
# tokio                    = "*"
# futures                  = "*"
# mio                      = "*"
# tokio-fs                 = "*"
# tokio-io                 = "*"
# tokio-reactor            = "*"
# tokio-tcp                = "*"
# tokio-threadpool         = "*"
# tokio-timer              = "*"
# tokio-udp                = "*"
nalgebra                 = "*"
nalgebra-lapack          = "*"
quickcheck               = "*"
quickcheck_macros        = "*"
proptest                 = "*"
approx                   = "*"
rand                     = "*"
alga                     = "*"
log                      = "*"
bitflags                 = "*"
num_cpus                 = "*"
clap                     = "*"
toml                     = "*"
slab                     = "*"
rayon                    = "*"
rayon-core               = "*"
dwt                      = "*"
prophet                  = "*"
daggy                    = "*"
petgraph                 = "*"
xml-rs                   = "*"
xmltree                  = "*"
prettytable-rs           = "*"
nanomsg                  = "*"
# diesel                   = "*"
# diesel_codegen           = "*"
# sqlite                   = "*"
rusqlite                 = "*"
assert                   = "*"
random                   = "*"
# matrix                   = "*"
webm                     = "1.0.0"
vpx                      = "0.3.1"
libvpx-native-sys        = "*"
ffmpeg-sys               = "*"
ffmpeg                   = { git = "https://github.com/meh/rust-ffmpeg", rev = "28b7a82ac1ca1e201f1967b7231c21eb2e2f7447" }
chemfiles                = "0.8"

[lib]
name = "chemsim"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/main.rs"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 8
panic = "abort"
